tests/baselines/reference/optionalChainingInParameterInitializer.2(strict=true,target=es2015).errors.txt
optionalChainingInParameterInitializer.2.ts(3,7): error TS2373: Parameter 'b' cannot reference identifier 'a' declared after it.
optionalChainingInParameterInitializer.2.ts(3,7): error TS2722: Cannot invoke an object which is possibly 'undefined'.
optionalChainingInParameterInitializer.2.ts(6,19): error TS2373: Parameter 'd' cannot reference identifier 'x' declared after it.


==== optionalChainingInParameterInitializer.2.ts (3 errors) ====
    // https://github.com/microsoft/TypeScript/issues/36295
    const a = (): { d: string } | undefined => undefined;
    ((b = a()?.d) => { var a; })();
          ~
!!! error TS2373: Parameter 'b' cannot reference identifier 'a' declared after it.
          ~
!!! error TS2722: Cannot invoke an object which is possibly 'undefined'.
    
    const x = "";
    ((b = a()?.d, d = x) => { var x; })();
                      ~
!!! error TS2373: Parameter 'd' cannot reference identifier 'x' declared after it.